Bug 1305219 - Fix some minor issues reported by Coverity r=franziskus