cmd/signtool/javascript.c
@@ -1706,12 +1706,13 @@ make_dirs(char *path, int file_perms)
     }
 
     Path = PL_strdup(path);
+    if (!Path) {
+        return 0;
+    }
+
     start = strpbrk(Path, "/\\");
     if (!start) {
-        if (Path) {
-            PR_Free(Path);
-        }
-        return 0;
+        goto loser;
     }
     start++; /* start right after first slash */
 
